fix overflow scroll element

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,22 +1,19 @@
 .main {
-    width: 100vw;
+    width: 100%;
     height: 100%;
-    overflow-y: scroll;
-
     display: grid;
+    overflow: hidden;
     grid-template-columns: 1.1fr 2fr;
     column-gap: 1vw;
 
     .content {
         display: grid;
-
         padding: 15px;
-
         grid-template-rows: 0.8fr 3fr;
         row-gap: 2vw;
+        overflow: hidden;
 
         .dropdowns {
-            width: 68vw;
             display: flex;
             justify-content: space-between;
             overflow-x: scroll;
@@ -27,7 +24,6 @@
             display: flex;
             flex-wrap: wrap;
             gap: 23px;
-            width: 67vw;
             padding: 5px;
         }
     }
