--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -84,6 +84,7 @@
 
 .content {
     flex-grow: 1;
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar {
